Maybe fix alignment last time?

--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -56,7 +56,7 @@ http://www.tipue.com/search
 .tipue_search_left
 {
      float: left;
-     padding: 0 9px 0 80px;
+     padding: 0 9px 0 0px;
 }
 .tipue_search_right
 {
@@ -70,7 +70,7 @@ http://www.tipue.com/search
 #tipue_search_content
 {
      max-width: 750px;
-     padding: 15px 0 0 80px;
+     padding: 15px 0 0 0px;
 	margin: 0;
 }
 #tipue_search_results_count
